<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nvandervoort.mathathon.MainActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcome_to_mathathon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/enter_port_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/enter_port_num"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to_mathathon"
            app:layout_constraintStart_toStartOf="@+id/welcome_to_mathathon"
            app:layout_constraintEnd_toEndOf="@+id/welcome_to_mathathon"/>

        <RelativeLayout
            android:id="@+id/enter_port_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/enter_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:digits="0123456789."
                android:ems="8"
                android:hint="@string/ip_addr"
                android:inputType="numberDecimal"
                android:maxLength="15"
                android:completionThreshold="3"
                android:textColor="@android:color/black"
                tools:ignore="RelativeOverlap"/>

            <EditText
                android:id="@+id/enter_port_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/enter_ip"
                android:ems="3"
                android:hint="@string/port"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/colorPrimary"
                tools:ignore="RelativeOverlap"
                android:imeOptions="actionDone"/>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/connecting_spinkit"
                style="@style/SpinKitView.Large.ThreeBounce"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:visibility="invisible"
                app:SpinKit_Color="@color/colorAccent"/>

            <ImageView
                android:id="@+id/port_validity_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/valid_blue"
                android:visibility="gone"
                tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checking_port"
            android:textStyle="italic"
            android:textSize="12sp"
            android:gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="28dp"
            android:visibility="invisible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/main_linear_layout"
            app:layout_constraintEnd_toEndOf="@+id/main_linear_layout">

            <Button
                android:id="@+id/join_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/join"
                android:textColor="#ffcccccc"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap"/>

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/waiting_spinkit"
                style="@style/SpinKitView.Large.CubeGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                app:SpinKit_Color="@color/colorAccent"
                android:background="@android:color/transparent"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@android:string/cancel"
                android:textColor="@android:color/black"
                android:background="@android:color/transparent"
                android:layout_toStartOf="@+id/join_game_button"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:hint="321"
                tools:ignore="HardcodedText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
